Move developer over to openapi generated code
