# cmd/dbadmin/handler/developer.go
@@ -1,175 +1,297 @@
 package handler
 
 import (
+	"errors"
+	"net/http"
+
 	"github.com/gin-gonic/gin"
 
 	"github.com/erikbos/gatekeeper/pkg/types"
 )
 
-// registerDeveloperRoutes registers all routes we handle
-func (h *Handler) registerDeveloperRoutes(r *gin.RouterGroup) {
-	r.GET("/developers", h.handler(h.getAllDevelopers))
-	r.POST("/developers", h.handler(h.createDeveloper))
-
-	r.GET("/developers/:developer", h.handler(h.getDeveloper))
-	r.POST("/developers/:developer", h.handler(h.updateDeveloper))
-	r.DELETE("/developers/:developer", h.handler(h.deleteDeveloper))
-
-	r.GET("/developers/:developer/attributes", h.handler(h.getDeveloperAttributes))
-	r.POST("/developers/:developer/attributes", h.handler(h.updateDeveloperAttributes))
-
-	r.GET("/developers/:developer/attributes/:attribute", h.handler(h.getDeveloperAttributeByName))
-	r.POST("/developers/:developer/attributes/:attribute", h.handler(h.updateDeveloperAttributeByName))
-	r.DELETE("/developers/:developer/attributes/:attribute", h.handler(h.deleteDeveloperAttributeByName))
-}
-
-const (
-	// Name of developer parameter in the route definition
-	developerParameter = "developer"
-
-	// 	// Name of attribute parameter in the route definition
-	attributeParameter = "attribute"
-)
-
-// getAllDevelopers returns all developers
-// FIXME: add pagination support
-func (h *Handler) getAllDevelopers(c *gin.Context) handlerResponse {
+// (GET /v1/organizations/{organization_name}/developers)
+func (h *Handler2) GetV1OrganizationsOrganizationNameDevelopers(c *gin.Context, organizationName OrganizationName, params GetV1OrganizationsOrganizationNameDevelopersParams) {
 
 	developers, err := h.service.Developer.GetAll()
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	if c.Query("expand") == "true" {
-		return handleOK(StringMap{"developer": developers})
+	// Do we have to return full developer details?
+	if params.Expand != nil && *params.Expand {
+		h.responseDevelopers(c, developers)
+		return
 	}
-	emailAddresses := make([]string, len(developers)-1)
-	for _, developer := range developers {
-		emailAddresses = append(emailAddresses, developer.Email)
-	}
-	return handleOK(emailAddresses)
+	h.responseDeveloperEmailAddresses(c, developers)
 }
 
-// getDeveloper returns full details of one developer
-func (h *Handler) getDeveloper(c *gin.Context) handlerResponse {
+// (POST /v1/organizations/{organization_name}/developers)
+func (h *Handler2) PostV1OrganizationsOrganizationNameDevelopers(c *gin.Context, organizationName OrganizationName) {
 
-	developer, err := h.service.Developer.Get(c.Param(developerParameter))
-	if err != nil {
-		return handleError(err)
+	var receivedDeveloper Developer
+	if err := c.ShouldBindJSON(&receivedDeveloper); err != nil {
+		h.responseError(c, types.NewBadRequestError(err))
+		return
 	}
-	return handleOK(developer)
+	newDeveloper := fromDeveloper(receivedDeveloper)
+	createdDeveloper, err := h.service.Developer.Create(newDeveloper, h.who(c))
+	if err != nil {
+		h.responseError(c, types.NewBadRequestError(err))
+		return
+	}
+	h.responseDeveloperCreated(c, &createdDeveloper)
 }
 
-// getDeveloperAttributes returns attributes of a developer
-func (h *Handler) getDeveloperAttributes(c *gin.Context) handlerResponse {
+// (DELETE /v1/organizations/{organization_name}/developers/{developer_emailaddress})
+func (h *Handler2) DeleteV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddress(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress) {
 
-	developer, err := h.service.Developer.Get(c.Param(developerParameter))
+	developer, err := h.service.Developer.Delete(string(developerEmailaddress), h.who(c))
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	return handleOKAttributes(developer.Attributes)
+	h.responseDeveloper(c, &developer)
 }
 
-// getDeveloperAttributeByName returns one particular attribute of a developer
-func (h *Handler) getDeveloperAttributeByName(c *gin.Context) handlerResponse {
+// (GET /v1/organizations/{organization_name}/developers/{developer_emailaddress})
+func (h *Handler2) GetV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddress(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress) {
 
-	developer, err := h.service.Developer.Get(c.Param(developerParameter))
+	developer, err := h.service.Developer.Get(string(developerEmailaddress))
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	attributeValue, err := developer.Attributes.Get(c.Param(attributeParameter))
-	if err != nil {
-		return handleError(err)
-	}
-	return handleOK(attributeValue)
+	h.responseDeveloper(c, developer)
 }
 
-// createDeveloper creates a new developer
-func (h *Handler) createDeveloper(c *gin.Context) handlerResponse {
+// (POST /v1/organizations/{organization_name}/developers/{developer_emailaddress})
+func (h *Handler2) PostV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddress(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress, params PostV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressParams) {
 
-	var newDeveloper types.Developer
-	if err := c.ShouldBindJSON(&newDeveloper); err != nil {
-		return handleBadRequest(err)
+	if params.Action != nil {
+		h.changeDeveloperStatus(c, string(developerEmailaddress), string(*params.Action))
+		return
 	}
-	storedDeveloper, err := h.service.Developer.Create(newDeveloper, h.who(c))
+	var receivedDeveloper Developer
+	if err := c.ShouldBindJSON(&receivedDeveloper); err != nil {
+		h.responseErrorBadRequest(c, err)
+		return
+	}
+	updatedDeveloper := fromDeveloper(receivedDeveloper)
+	storedDeveloper, err := h.service.Developer.Update(string(developerEmailaddress), updatedDeveloper, h.who(c))
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	return handleCreated(storedDeveloper)
+	h.responseDeveloperUpdated(c, &storedDeveloper)
 }
 
-// updateDeveloper updates an existing developer
-func (h *Handler) updateDeveloper(c *gin.Context) handlerResponse {
+func (h *Handler2) changeDeveloperStatus(c *gin.Context, developerEmailaddress, requestedStatus string) {
 
-	var updatedDeveloper types.Developer
-	if err := c.ShouldBindJSON(&updatedDeveloper); err != nil {
-		return handleBadRequest(err)
-	}
-	// developer name in path must match developer name in posted body
-	if updatedDeveloper.Email != c.Param(developerParameter) {
-		return handleNameMismatch()
-	}
-	storedDeveloper, err := h.service.Developer.Update(updatedDeveloper, h.who(c))
+	developer, err := h.service.Developer.Get(string(developerEmailaddress))
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	return handleOK(storedDeveloper)
+	switch requestedStatus {
+	case "active":
+		developer.Activate()
+	case "inactive":
+		developer.Deactivate()
+	default:
+		h.responseErrorBadRequest(c, errors.New("unknown status requested"))
+		return
+	}
+	_, err = h.service.Developer.Update(string(developerEmailaddress), *developer, h.who(c))
+	if err != nil {
+		h.responseError(c, err)
+		return
+	}
+	c.Status(http.StatusNoContent)
 }
 
-// updateDeveloperAttributes updates attributes of developer
-func (h *Handler) updateDeveloperAttributes(c *gin.Context) handlerResponse {
+// (GET /v1/organizations/{organization_name}/developers/{developer_emailaddress}/attributes)
+func (h *Handler2) GetV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressAttributes(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress) {
 
-	var receivedAttributes struct {
-		Attributes types.Attributes `json:"attribute"`
+	developer, err := h.service.Developer.Get(string(developerEmailaddress))
+	if err != nil {
+		h.responseError(c, err)
+		return
 	}
+	h.responseAttributes(c, developer.Attributes)
+}
+
+// (POST /v1/organizations/{organization_name}/developers/{developer_emailaddress}/attributes)
+func (h *Handler2) PostV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressAttributes(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress) {
+
+	// var receivedAttributes struct {
+	// 	Attributes types.Attributes `json:"attribute"`
+	// }
+	var receivedAttributes Attributes
 	if err := c.ShouldBindJSON(&receivedAttributes); err != nil {
-		return handleBadRequest(err)
+		h.responseErrorBadRequest(c, err)
+		return
 	}
-	if err := h.service.Developer.UpdateAttributes(c.Param(developerParameter),
-		receivedAttributes.Attributes, h.who(c)); err != nil {
-		return handleError(err)
+	attributes := fromAttributesRequest(receivedAttributes.Attribute)
+	if err := h.service.Developer.UpdateAttributes(
+		string(developerEmailaddress), attributes, h.who(c)); err != nil {
+		h.responseErrorBadRequest(c, err)
+		return
 	}
-	return handleOKAttributes(receivedAttributes.Attributes)
+	h.responseAttributes(c, attributes)
 }
 
-// updateDeveloperAttributeByName update an attribute of developer
-func (h *Handler) updateDeveloperAttributeByName(c *gin.Context) handlerResponse {
+// (DELETE /v1/organizations/{organization_name}/developers/{developer_emailaddress}/attributes/{attribute_name})
+func (h *Handler2) DeleteV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressAttributesAttributeName(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress, attributeName AttributeName) {
 
-	var receivedValue types.AttributeValue
-	if err := c.ShouldBindJSON(&receivedValue); err != nil {
-		return handleBadRequest(err)
-	}
-	newAttribute := types.Attribute{
-		Name:  c.Param(attributeParameter),
-		Value: receivedValue.Value,
-	}
-	if err := h.service.Developer.UpdateAttribute(c.Param(developerParameter),
-		newAttribute, h.who(c)); err != nil {
-		return handleError(err)
-	}
-	return handleOKAttribute(newAttribute)
-}
-
-// deleteDeveloperAttributeByName removes an attribute of developer
-func (h *Handler) deleteDeveloperAttributeByName(c *gin.Context) handlerResponse {
-
-	attributeToDelete := c.Param(attributeParameter)
-	oldValue, err := h.service.Developer.DeleteAttribute(c.Param(developerParameter),
-		attributeToDelete, h.who(c))
+	oldValue, err := h.service.Developer.DeleteAttribute(string(
+		developerEmailaddress), string(attributeName), h.who(c))
 	if err != nil {
-		return handleBadRequest(err)
+		h.responseError(c, err)
+		return
 	}
-	return handleOKAttribute(types.Attribute{
-		Name:  attributeToDelete,
+	h.responseAttributeDeleted(c, &types.Attribute{
+		Name:  string(attributeName),
 		Value: oldValue,
 	})
 }
 
-// deleteDeveloper deletes of one developer
-func (h *Handler) deleteDeveloper(c *gin.Context) handlerResponse {
+// (GET /v1/organizations/{organization_name}/developers/{developer_emailaddress}/attributes/{attribute_name})
+func (h *Handler2) GetV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressAttributesAttributeName(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress, attributeName AttributeName) {
 
-	developer, err := h.service.Developer.Delete(c.Param(developerParameter), h.who(c))
+	developer, err := h.service.Developer.Get(string(developerEmailaddress))
 	if err != nil {
-		return handleError(err)
+		h.responseError(c, err)
+		return
 	}
-	return handleOK(developer)
+	attributeValue, err := developer.Attributes.Get(string(attributeName))
+	if err != nil {
+		h.responseError(c, err)
+		return
+	}
+	h.responseAttributeRetrieved(c, &types.Attribute{
+		Name:  string(attributeName),
+		Value: attributeValue,
+	})
+}
+
+// (POST /v1/organizations/{organization_name}/developers/{developer_emailaddress}/attributes/{attribute_name})
+func (h *Handler2) PostV1OrganizationsOrganizationNameDevelopersDeveloperEmailaddressAttributesAttributeName(c *gin.Context, organizationName OrganizationName, developerEmailaddress DeveloperEmailaddress, attributeName AttributeName) {
+
+	// var receivedValue types.AttributeValue
+	var receivedValue Attribute
+	if err := c.ShouldBindJSON(&receivedValue); err != nil {
+		h.responseErrorBadRequest(c, err)
+		return
+	}
+	newAttribute := types.Attribute{
+		Name:  string(attributeName),
+		Value: *receivedValue.Value,
+	}
+	if err := h.service.Developer.UpdateAttribute(
+		string(developerEmailaddress), newAttribute, h.who(c)); err != nil {
+		h.responseErrorBadRequest(c, err)
+		return
+	}
+	h.responseAttributeUpdated(c, &newAttribute)
+}
+
+// Responses
+
+func (h *Handler2) responseDeveloperEmailAddresses(c *gin.Context, developers types.Developers) {
+
+	DevelopersEmailAddresses := make([]string, len(developers))
+	for i, d := range developers {
+		DevelopersEmailAddresses[i] = d.Email
+	}
+	c.IndentedJSON(http.StatusOK, DevelopersEmailAddresses)
+}
+
+func (h *Handler2) responseDevelopers(c *gin.Context, developers types.Developers) {
+
+	all_developers := make([]Developer, len(developers))
+	for i, d := range developers {
+		all_developers[i] = Developer(ToDeveloperResponse(&d))
+	}
+	c.IndentedJSON(http.StatusOK, Developers{
+		Developer: &all_developers,
+	})
+}
+
+func (h *Handler2) responseDeveloper(c *gin.Context, developer *types.Developer) {
+	c.IndentedJSON(http.StatusOK, ToDeveloperResponse(developer))
+}
+
+func (h *Handler2) responseDeveloperCreated(c *gin.Context, developer *types.Developer) {
+	c.IndentedJSON(http.StatusCreated, ToDeveloperResponse(developer))
+}
+
+func (h *Handler2) responseDeveloperUpdated(c *gin.Context, developer *types.Developer) {
+	c.IndentedJSON(http.StatusOK, ToDeveloperResponse(developer))
+}
+
+// type conversion
+
+func ToDeveloperResponse(d *types.Developer) Developer {
+
+	return Developer{
+		Apps:           toAppNamesResponse(d.Apps),
+		Attributes:     toAttributesResponse(d.Attributes),
+		CreatedAt:      &d.CreatedAt,
+		CreatedBy:      &d.CreatedBy,
+		DeveloperId:    &d.DeveloperID,
+		Email:          &d.Email,
+		FirstName:      &d.FirstName,
+		LastModifiedBy: &d.LastModifiedBy,
+		LastModifiedAt: &d.LastModifiedAt,
+		LastName:       &d.LastName,
+		Status:         &d.Status,
+		UserName:       &d.UserName,
+	}
+}
+
+func toAppNamesResponse(apps types.StringSlice) *[]string {
+
+	all_apps := make([]string, len(apps))
+	for i, a := range apps {
+		all_apps[i] = a
+	}
+	return &all_apps
+}
+
+func fromDeveloper(d Developer) types.Developer {
+
+	dev := types.Developer{
+		Attributes: fromAttributesRequest(d.Attributes),
+	}
+	if d.CreatedAt != nil {
+		dev.CreatedAt = *d.CreatedAt
+	}
+	if d.CreatedBy != nil {
+		dev.CreatedBy = *d.CreatedBy
+	}
+	if d.DeveloperId != nil {
+		dev.DeveloperID = *d.DeveloperId
+	}
+	if d.Email != nil {
+		dev.Email = *d.Email
+	}
+	if d.FirstName != nil {
+		dev.FirstName = *d.FirstName
+	}
+	if d.LastModifiedBy != nil {
+		dev.LastModifiedBy = *d.LastModifiedBy
+	}
+	if d.LastModifiedAt != nil {
+		dev.LastModifiedAt = *d.LastModifiedAt
+	}
+	if d.LastName != nil {
+		dev.LastName = *d.LastName
+	}
+	if d.Status != nil {
+		dev.Status = *d.Status
+	}
+	if d.UserName != nil {
+		dev.UserName = *d.UserName
+	}
+	return dev
 }
